In the last week or so, the nightly vlc for android build for arm v7 crashes when playing a mp3 m3u file as a network stream, ie: http://listen.radiohyrule.com:8000/listen.m3u. It has failed with every mp3 m3u file I try and play. Ogg and
Opus streams play as expected. When you try and play a mp3 m3u network stream, vlc crashes with the crash screen popup. However, vlc does not create a logcat file in the root of the sdcards and running logcat -d has nothing in it.
Edited
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Child items
0
No child items are currently assigned. Use child items to break down this issue into smaller parts.
Linked items
0
Link issues together to show that they're related.
Learn more.
(gdb) bt full[#0](https://code.videolan.org/videolan/vlc/-/issues/0) 0x40125a2e in dlfree () from /home/edwardw/android/vlc-android/obj/local/armeabi-v7a/libc.soNo symbol table info available.[#1](https://code.videolan.org/videolan/vlc/-/issues/1) 0x40120f64 in free () from /home/edwardw/android/vlc-android/obj/local/armeabi-v7a/libc.soNo symbol table info available.[#2](https://code.videolan.org/videolan/vlc/-/issues/2) 0x5f0bb870 in vlc_meta_Set () from /home/edwardw/android/vlc-android/obj/local/armeabi-v7a/libvlcjni.soNo locals.[#3](https://code.videolan.org/videolan/vlc/-/issues/3) 0x5efd6480 in Control () from /home/edwardw/android/vlc-android/obj/local/armeabi-v7a/libvlcjni.soNo locals.[#4](https://code.videolan.org/videolan/vlc/-/issues/4) 0x5f0bf988 in AStreamControl () from /home/edwardw/android/vlc-android/obj/local/armeabi-v7a/libvlcjni.soNo locals.[#5](https://code.videolan.org/videolan/vlc/-/issues/5) 0x5f0c0356 in stream_Control () from /home/edwardw/android/vlc-android/obj/local/armeabi-v7a/libvlcjni.soNo locals.[#6](https://code.videolan.org/videolan/vlc/-/issues/6) 0x5f0b5202 in demux_vaControlHelper () from /home/edwardw/android/vlc-android/obj/local/armeabi-v7a/libvlcjni.soNo locals.[#7](https://code.videolan.org/videolan/vlc/-/issues/7) 0x5ef5deee in Control () from /home/edwardw/android/vlc-android/obj/local/armeabi-v7a/libvlcjni.soNo locals.[#8](https://code.videolan.org/videolan/vlc/-/issues/8) 0x5f0b5fc0 in demux_Control () at ../../src/input/demux.h:48No locals.[#9](https://code.videolan.org/videolan/vlc/-/issues/9) 0x5f0b6370 in InputSourceMeta.isra.10 () at ../../src/input/input.c:2550No locals.[#10](https://code.videolan.org/videolan/vlc/-/issues/10) 0x5f0b86c6 in Init () at ../../src/input/input.c:1265No locals.[#11](https://code.videolan.org/videolan/vlc/-/issues/11) 0x5f0bb16a in Run () at ../../src/input/input.c:515No locals.[#12](https://code.videolan.org/videolan/vlc/-/issues/12) 0x5f0e95cc in joinable_thread () at ../../src/android/thread.c:347No locals.[#13](https://code.videolan.org/videolan/vlc/-/issues/13) 0x4012240c in __thread_entry () from /home/edwardw/android/vlc-android/obj/local/armeabi-v7a/libc.soNo symbol table info available.[#14](https://code.videolan.org/videolan/vlc/-/issues/14) 0x40121b00 in pthread_create () from /home/edwardw/android/vlc-android/obj/local/armeabi-v7a/libc.soNo symbol table info available.[#15](https://code.videolan.org/videolan/vlc/-/issues/15) 0x00000000 in ?? ()No symbol table info available.(gdb)
Jean-Baptiste Kempfchanged title from VLC for Android crashes when playing a mp3 m3u network stream to VLC 2.2 crashes when playing a mp3 m3u network stream
changed title from VLC for Android crashes when playing a mp3 m3u network stream to VLC 2.2 crashes when playing a mp3 m3u network stream