demux: use stream_vaControl() where applicable (fixes #9302)